refactor: clear Sonar promotion maintainability batch A